# rust-aws-serverless-api-sample

./: Cargo.toml  Dockerfile.build  README.md  build.sh  template.yaml
src/: main.rs
