[package]
name = "rust-aws-serverless-api-sample"
version = "0.1.0"
authors = ["uedayou <yooueda@gmail.com>"]
edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_http = "0.3.0"
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
